--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
     environment:
       - PORT=3000
       - MONGODB_URL=<confidential>
-      - SECRET=<confidential>
+      - JWT_SECRET=<confidential>
     build: ./users
     ports:
       - "3000:3000"
@@ -22,7 +22,7 @@ services:
     environment:
       - PORT=5000
       - MONGODB_URL=<confidential>
-      - SECRET=<confidential>
+      - JWT_SECRET=<confidential>
     build: ./auctions
     ports:
       - "5000:5000"
@@ -30,6 +30,6 @@ services:
   tests:
     environment:
       - MONGODB_URL=<confidential>
-      - SECRET=<confidential>
+      - JWT_SECRET=<confidential>
     build: ./tests
     command: ["npm", "run", "test"]
